--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,28 @@ jobs:
           name: "Initial"
           command: "echo Hi!"
 
+  # Add a new job for running the Dependency-Check
+  dependency-check:
+    docker:
+      - image: maven:3.8.1-jdk-11
+    steps:
+      - checkout
+      - run:
+          name: "Run Dependency-Check"
+          command: |
+            mvn org.owasp:dependency-check-maven:check
+    # Save the reports as artifacts
+    artifacts:
+      paths:
+        - target/dependency-check-report
+
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   init-workflow:
     jobs:
       - initial
+      # Add the dependency-check job to the workflow
+      - dependency-check:
+          requires:
+            - initial
