--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <junit.version>5.9.3</junit.version>
         <checkstyle.version>10.12.0</checkstyle.version>
         <mockito.core-version>5.3.1</mockito.core-version>
+        <dependency.check.maven-version>8.3.1</dependency.check.maven-version>
     </properties>
 
     <dependencyManagement>
@@ -78,6 +79,12 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.core-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${dependency.check.maven-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -201,6 +208,20 @@
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
                 </configuration>
+            </plugin>
+
+            <!-- Automate checking for known vulnerabilities -->
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${dependency.check.maven-version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
